fixed footer overlapping issue

--- a/styles.css
+++ b/styles.css
@@ -86,7 +86,7 @@ hr {
 }
 .bottom-cards {
     width: 100%;
-    height: 40vh;
+    min-height: 40vh;
 }
 .bottom-card {
     border-radius: 0; /* without this, there will still be radius marks at top of cards */
@@ -96,6 +96,7 @@ hr {
     align-items: center;
     margin: 1rem auto;
     padding: 1rem;
+    width: 350px;
 }
 
 .bottom-card img{
@@ -108,9 +109,12 @@ hr {
     flex-direction: column;
     margin-top: 2rem;
 }
+.main-container, footer {
+    position: relative;
+}
 footer {
-    height: 250px;
-    letter-spacing: 2px;
+    letter-spacing: 3px;
+    bottom: 0px
 }
 
 
